--- a/Working with Teams/using-playbooks.mdx
+++ b/Working with Teams/using-playbooks.mdx
@@ -14,7 +14,9 @@ Alternatively, you can attach a `<filename>.devin.md` file when you start your D
 
 Once you start the session, you should see your playbook show up with a grey background in the chat with Devin!
 
-![Screenshot 2024-04-11 at 9.57.27 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/fc9aab99-07b6-4710-9338-276c8f0b20f3/Screenshot_2024-04-11_at_9.57.27_PM.png)
+<Frame>
+    ![Devin](/images/playbooks6.png)
+</Frame>
 
 ## Refining Playbooks
 
@@ -26,7 +28,9 @@ Rewind Devin’s memory and file system to any past moment in time and resume - 
 
 Simply scrub through the session timeline on the righthand side and restore the checkpoint of the session you would like to go back to.
 
-![Screenshot 2024-06-27 at 3.52.52 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/caba1de4-7c79-4f82-a751-16d6ed1a0b1d/Screenshot_2024-06-27_at_3.52.52_PM.png)
+<Frame>
+    ![Devin](/images/playbooks7.png)
+</Frame>
 
 ### Edit playbook steps and then rollback
 
@@ -34,10 +38,14 @@ You can now edit playbooks while you’re running a session! If Devin isn’t re
 
 This will allow you to test and iterate to make the playbook more reliable, much faster!
 
-![Screenshot 2024-06-27 at 3.51.34 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/020bd793-3802-42a2-9e2b-8915ea94e9bf/Screenshot_2024-06-27_at_3.51.34_PM.png)
+<Frame>
+    ![Devin](/images/playbooks8.png)
+</Frame>
 
 ## Example Gallery
 
 Check out the Community Gallery at https://preview.devin.ai/playbooks! 
 
-![Screenshot 2024-05-31 at 7.09.40 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/8fbe72fb-6764-4a97-845c-3c9e2620eeb9/33a9cbc9-33a5-4f7c-8cca-ef07927e70a7.png)
+<Frame>
+    ![Devin](/images/playbooks9.png)
+</Frame>
