--- a/Working with Teams/using-playbooks.mdx
+++ b/Working with Teams/using-playbooks.mdx
@@ -6,11 +6,19 @@ title: "Using Playbooks"
 
 To use playbooks simply select one from your Team or the Community library. You’ve successfully attached a playbook if you see a a blue pill appear, along with an inline component for editing the playbook before starting your session 
 
-[Screen Recording 2024-07-30 at 11.16.30 PM.mov](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/8af7a128-b865-42a6-8058-53abd267015c/Screen_Recording_2024-07-30_at_11.16.30_PM.mov)
+<video
+  controls
+  className="w-full aspect-video"
+  src="/images/playbooks4.mov"
+></video>
 
 Alternatively, you can attach a `<filename>.devin.md` file when you start your Devin session…
 
-[Screen Recording 2024-04-11 at 9.55.09 PM.mov](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/8b259904-ddb9-4c0a-82e0-345056ef9232/Screen_Recording_2024-04-11_at_9.55.09_PM.mov)
+<video
+  controls
+  className="w-full aspect-video"
+  src="/images/playbooks5.mov"
+></video>
 
 Once you start the session, you should see your playbook show up with a grey background in the chat with Devin!
 
