--- a/Working with Teams/invite-team.mdx
+++ b/Working with Teams/invite-team.mdx
@@ -7,8 +7,12 @@ Add members to your Devin organization so you can collaborate with your team and
 
 `Members` can start Devin sessions and view and contribute to your organization’s knowledge, playbooks, machine snapshots and more. `Admins` can invite other team members and set up organization integrations. 
 
-![Screenshot 2024-06-09 at 11.00.20 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/99222d9d-bed4-482a-b037-836fa8ff52e4/Screenshot_2024-06-09_at_11.00.20_PM.png)
+<Frame>
+    ![Devin](/images/team1.png)
+</Frame>
 
 Want to share your Devin sessions with people outside your team? Share a link to your sessions so a person outside of your organization can view Devin’s work. Make sure you don’t share anything confidential!
 
-![Untitled](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/ed2e1a37-8308-4ef5-8d8b-77b1a66f203e/Untitled.gif)
+<Frame>
+    ![Devin](/images/team2.gif)
+</Frame>
