--- a/Working with Teams/invite-team.mdx
+++ b/Working with Teams/invite-team.mdx
@@ -14,5 +14,5 @@ Add members to your Devin organization so you can collaborate with your team and
 Want to share your Devin sessions with people outside your team? Share a link to your sessions so a person outside of your organization can view Devin’s work. Make sure you don’t share anything confidential!
 
 <Frame>
-  <img src=/images/team2.gif />
+  <img src="/images/team2.gif" alt="settings gif" />
 </Frame>
