--- a/Collaborate with Devin/machine.mdx
+++ b/Collaborate with Devin/machine.mdx
@@ -27,18 +27,18 @@ You can also use VSCode to open up a terminal! To do this simply use the shortcu
 
 ## Tips
 
-### View file diffs
-
-You can view current and a log of Devin’s edits under three dots menu > **View Global File Diff.** This section will show all files modified by Devin, with the temporary exception of some edits made via the shell.
-
-### Keep Devin in the loop
-
-If you do edit files or otherwise make changes to Devin’s machine state, make sure to tell Devin what you changed! Otherwise Devin might get confused — imagine if your code mysteriously changed while you were in the middle of working on it. 
-
-### Edit while it’s running
-
+<Accordion title="Edit while the session is running">
 You can only use and interact with Devin’s machine while the sessions is running. Once the session is terminated it’s no longer available.
+</Accordion>
 
-### Avoid sharing
+<Accordion title="Check out file diffs">
+You can view current and a log of Devin’s edits under three dots menu > **View Global File Diff.** This section will show all files modified by Devin, with the temporary exception of some edits made via the shell.
+</Accordion>
 
-Do ***not*** share the link with others since this will leak your files that you’ve given to Devin.
+<Accordion title="Keep Devin a heads up when making edits">
+If you do edit files or otherwise make changes to Devin’s machine state, make sure to tell Devin what you changed! Otherwise Devin might get confused — imagine if your code mysteriously changed while you were in the middle of working on it.
+</Accordion>
+
+<Accordion title="Help Devin on the last mile">
+If Devin got you 90% of the way there, you can jump into its machine and make the final changes to complete the task before opening a PR.
+</Accordion>
