--- a/Collaborate with Devin/browser.mdx
+++ b/Collaborate with Devin/browser.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Interactive Browser"
 description: "Help Devin navigate through its browser"
+icon: 'rocket'
 ---
 
 Interactive Browser allows users to directly use Devin’s browser. 
