--- a/Collaborate with Devin/browser.mdx
+++ b/Collaborate with Devin/browser.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Interactive Browser"
 description: "Help Devin navigate through its browser"
-icon: 'rocket'
+icon: 'arrow-pointer'
 ---
 
 Interactive Browser allows users to directly use Devin’s browser. 
