--- a/Get Started/first-run.mdx
+++ b/Get Started/first-run.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Your First Session"
 description: "Learn your favorite ways of working with Devin"
+icon: 'person-running'
 ---
 
 This guide will give some inspiration to start working with Devin. Start with Devin sessions that are **smaller in scope**, **well-documented**, **easily verifiable** and that have **a quick feedback loop**.
