--- a/Collaborate with Devin/machine.mdx
+++ b/Collaborate with Devin/machine.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Interacting with Devin's Machine"
 description: "Work with Devin's editor and shell in VSCode"
+icon: 'code'
 ---
 
 ## How to access Devin’s Machine
