--- a/Learn about Devin/prompting.mdx
+++ b/Learn about Devin/prompting.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Prompting Advice"
 description: "Tips on how to best prompt and redirect Devin"
+icon: 'comment'
 ---
 
 Devin needs guidance to make sure it knows what tasks to execute, and more importantly, any preference in how it should execute those tasks. If not specified, Devin will make its own judgment calls. 
