--- a/Onboard Devin/knowledge.mdx
+++ b/Onboard Devin/knowledge.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Knowledge"
 description: "Share important context and knowledge so Devin can get onboarded faster"
+icon: 'brain'
 ---
 
 ## What is Knowledge?
