--- a/Onboard Devin/secrets.mdx
+++ b/Onboard Devin/secrets.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Secrets & Site Cookies"
 description: "Securely share credentials with Devin so it can access any tool"
+icon: 'key'
 ---
 
 ## **Working with Secrets**
