--- a/Onboard Devin/snapshots.mdx
+++ b/Onboard Devin/snapshots.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Machine Snapshots"
 description: "Save Devin's machine state to reuse or build upon in future sessions"
+icon: 'camera'
 ---
 
 ## Quickstart: Your First Machine Snapshot
