--- a/Working with Teams/multidevin.mdx
+++ b/Working with Teams/multidevin.mdx
@@ -1,6 +1,7 @@
 ---
 title: "MultiDevin"
 description: "Let Devin create other Devins to delegate and accelerate work"
+icon: 'chart-network'
 ---
 
 ## What is MultiDevin?
