--- a/Working with Teams/playbooks-intro.mdx
+++ b/Working with Teams/playbooks-intro.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Introduction to Playbooks"
 description: "Build a library of reusable prompts for your organization"
+icon: 'book'
 ---
 
 ## What are Playbooks?
