--- a/security.mdx
+++ b/security.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Security at Cognition"
 description: "We want Devin to be a core contributor in your organization, and have prioritized security, data privacy and compliance to make it possible"
+icon: 'lock'
 ---
 
 ## Security
