--- a/Collaborate with Devin/machine.mdx
+++ b/Collaborate with Devin/machine.mdx
@@ -36,7 +36,7 @@ You can only use and interact with Devin’s machine while the sessions is runni
 You can view current and a log of Devin’s edits under three dots menu > **View Global File Diff.** This section will show all files modified by Devin, with the temporary exception of some edits made via the shell.
 </Accordion>
 
-<Accordion title= icon: 'flag-checkered'; "Keep Devin a heads up when making edits">
+<Accordion title="Keep Devin a heads up when making edits" icon="flag-checkered">
 If you do edit files or otherwise make changes to Devin’s machine state, make sure to tell Devin what you changed! Otherwise Devin might get confused — imagine if your code mysteriously changed while you were in the middle of working on it.
 </Accordion>
 
