--- a/Collaborate with Devin/machine.mdx
+++ b/Collaborate with Devin/machine.mdx
@@ -28,18 +28,18 @@ You can also use VSCode to open up a terminal! To do this simply use the shortcu
 
 ## Tips
 
-<Accordion title="Edit while the session is running">
+<Accordion title="Edit while the session is running" icon="wave-pulse">
 You can only use and interact with Devin’s machine while the sessions is running. Once the session is terminated it’s no longer available.
 </Accordion>
 
-<Accordion title="Check out file diffs">
+<Accordion title="Check out file diffs" icon="file-plus-minus">
 You can view current and a log of Devin’s edits under three dots menu > **View Global File Diff.** This section will show all files modified by Devin, with the temporary exception of some edits made via the shell.
 </Accordion>
 
-<Accordion title="Keep Devin a heads up when making edits" icon="flag-checkered">
+<Accordion title="Keep Devin a heads up when making edits" icon="circle-info">
 If you do edit files or otherwise make changes to Devin’s machine state, make sure to tell Devin what you changed! Otherwise Devin might get confused — imagine if your code mysteriously changed while you were in the middle of working on it.
 </Accordion>
 
-<Accordion title="Help Devin on the last mile">
+<Accordion title="Help Devin on the last mile" icon="flag-checkered">
 If Devin got you 90% of the way there, you can jump into its machine and make the final changes to complete the task before opening a PR.
 </Accordion>
