--- a/Onboard Devin/secrets.mdx
+++ b/Onboard Devin/secrets.mdx
@@ -20,15 +20,15 @@ This is now possible in the [Settings > Secrets](http://preview.devin.ai/setting
 
 There are 3 types of secrets available:
 
-<Accordion title="Plain Text">
+<Accordion title="Plain Text" icon="message-text">
 This is most suitable for secrets with a single value, such as an API key or an SSH key. Just paste in the value directly.
 </Accordion>
 
-<Accordion title="Key-Value">
+<Accordion title="Key-Value" icon="key">
 Use this for more multi-variable logins. For instance, to sign into Amazon, Devin needs both an email and a password to sign in successfully. Add the field name under ‘Key’ (e.g. email, username, password, etc.) and add the input Devin should use under ‘Value’. ‘Value’ is always masked and cannot be viewed any other user in your organization.
 </Accordion>
 
-<Accordion title="Site Cookies">
+<Accordion title="Site Cookies" icon="cookie">
 In addition to Key-Value and Plain Text secrets, you can also add site cookies. **Cookies “hold” your authenticated state**; if you are logged into some site, then giving Devin your cookies for that site will make it so that Devin is automatically logged in for the same site.
     
 We support both key-value secrets and cookies because cookies can sometimes be insufficient by themselves. For example, on Amazon, Devin may be logged into the site while shopping or adding to cart, but Amazon might require an additional layer of password confirmation when it comes time to check out.
