Update and rename Slack Integration.mdx to slack.mdx

--- a/Integrations/slack.mdx
+++ b/Integrations/slack.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Integrations"
+title: "Slack Integration Guide"
 description: "Work with Devin in your favorite tools and applications"
-icon: 'link'
+icon: 'slack'
 ---
 
 ## Slack 
