--- a/Integrations/gh-int.mdx
+++ b/Integrations/gh-int.mdx
@@ -18,8 +18,7 @@ Integrating Devin into your GitHub organization allows Devin to access and submi
 
 1. In your Devin account at [preview.devin.ai](http://preview.devin.ai), go to [Settings](https://preview.devin.ai/settings/integrations) > **Integrations**, click the “Connect” button to integrate your organization with the Devin GitHub app.
     
-    ![Screenshot 2024-06-10 at 12.23.00 AM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/b5f66c26-53cb-4ded-b7f5-baf6fd88d4e7/Screenshot_2024-06-10_at_12.23.00_AM.png)
-    
+[image]    
 
 2. This will redirect you to GitHub where you can select the **GitHub account** and **repositories** to connect Devin, and review the relevant permissions. 
     1. If you’re setting up the GitHub integration on behalf of your organization make sure to select your company’s account. Note that you will not be able to set up a simultaneous personal Devin <> GitHub integration.
