--- a/Integrations/gh-int.mdx
+++ b/Integrations/gh-int.mdx
@@ -34,10 +34,8 @@ Integrating Devin into your GitHub organization allows Devin to access and submi
 
 4. **[For Enterprise customers only]** Add the `cognition-team` GitHub account to the relevant repositories. This gives us the ability to help onboard Devin onto your codebase and monitor Devin’s activity.
 
-<aside>
-⚠️  We recommend enabling branch protections on master to ensure checks are enforced before Devin can merge any changes.
 
-</aside>
+We recommend enabling branch protections on master to ensure checks are enforced before Devin can merge any changes.
 
 ## Using Devin with the GitHub Integration
 
