--- a/Integrations/gh-int.mdx
+++ b/Integrations/gh-int.mdx
@@ -16,7 +16,7 @@ Integrating Devin into your GitHub organization allows Devin to access and submi
 
 ## Setting up the Integration
 
-1. In your Devin account at [preview.devin.ai](http://preview.devin.ai), go to [Settings](https://preview.devin.ai/settings/integrations) > **Integrations**, click the “Connect” button to integrate your organization with the Devin GitHub app.
+1. In your Devin account at [preview.devin.ai](http://preview.devin.ai), go to [Settings](https://preview.devin.ai/settings/integrations) **Integrations**, click the “Connect” button to integrate your organization with the Devin GitHub app.
     
 [image]    
 
