--- a/Integrations/gh.mdx
+++ b/Integrations/gh.mdx
@@ -21,7 +21,7 @@ Integrating Devin into your GitHub organization allows Devin to access and submi
 [image]    
 
 2. This will redirect you to GitHub where you can select the **GitHub account** and **repositories** to connect Devin, and review the relevant permissions. 
-    1. If you’re setting up the GitHub integration on behalf of your organization make sure to select your company’s account. Note that you will not be able to set up a simultaneous personal Devin <> GitHub integration.
+    1. If you’re setting up the GitHub integration on behalf of your organization make sure to select your company’s account. Note that you will not be able to set up a simultaneous personal Devin-GitHub integration.
 
 ![Screenshot 2024-05-02 at 8.45.25 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/e6d6abc8-d48c-4c73-8a90-fd56d0de9c1d/Screenshot_2024-05-02_at_8.45.25_PM.png)
 
