--- a/Integrations/gh.mdx
+++ b/Integrations/gh.mdx
@@ -16,7 +16,7 @@ Integrating Devin into your GitHub organization allows Devin to access and submi
 
 ## Setting up the Integration
 
-1. In your Devin account at [preview.devin.ai](http://preview.devin.ai), go to [Settings](https://preview.devin.ai/settings/integrations) **Integrations**, click the “Connect” button to integrate your organization with the Devin GitHub app.
+1. In your Devin account at [preview.devin.ai](http://preview.devin.ai), go to [Settings](https://preview.devin.ai/settings/integrations) > **Integrations**, click the “Connect” button to integrate your organization with the Devin GitHub app.
     
 [image]    
 
@@ -87,7 +87,7 @@ Some additional information regarding Devin’s permissions in GitHub:
 - Devin will not mirror the permissions of the user running a session with Devin, it will retain the permissions granted at the org-level.
 - Devin cannot create new repos in your GitHub account.
 
-##GitHub Integration FAQs
+## GitHub Integration FAQs
 
 <AccordionGroup>
   <Accordion title="Can I connect my Personal GitHub account to my organization’s Devin account?" icon="user">
