--- a/Integrations/slack.mdx
+++ b/Integrations/slack.mdx
@@ -4,10 +4,7 @@ description: "Work with Devin in your favorite tools and applications"
 icon: 'slack'
 ---
 
-## Slack 
-
 Once you’ve connected Slack to your organization, you’ll be able to initialize Devin via Slack just by tagging **@Devin**. Devin responds in-thread with updates and questions, just as in the regular chat interface. 
-
 
 ### Slack Organization Integration
 
@@ -69,7 +66,7 @@ You can enable Slack notifications for specific runs and Devin will privately me
 We recommend setting up an specific channel (e.g. **#devin-runs**) to keep all of your Devin requests in one location.
     ![Channel](/images/slack_channel.png)
 
-### Permissions
+### Permissions Details
 
 | Permission                         | Description                                                       | Rationale  
 | ---------------------------------- | ----------------------------------------------------------------- |  ------------------------------------------------|  
