--- a/Integrations/gh.mdx
+++ b/Integrations/gh.mdx
@@ -18,24 +18,26 @@ Integrating Devin into your GitHub organization allows Devin to access and submi
 
 1. In your Devin account at [preview.devin.ai](http://preview.devin.ai), go to [Settings](https://preview.devin.ai/settings/integrations) > **Integrations**, click the “Connect” button to integrate your organization with the Devin GitHub app.
     
-[image]    
+<Frame>
+    ![Devin](/images/github1.png)
+</Frame>
 
 2. This will redirect you to GitHub where you can select the **GitHub account** and **repositories** to connect Devin, and review the relevant permissions. 
     1. If you’re setting up the GitHub integration on behalf of your organization make sure to select your company’s account. Note that you will not be able to set up a simultaneous personal Devin-GitHub integration.
 
-![Screenshot 2024-05-02 at 8.45.25 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/e6d6abc8-d48c-4c73-8a90-fd56d0de9c1d/Screenshot_2024-05-02_at_8.45.25_PM.png)
-
-![Screenshot 2024-05-02 at 8.45.05 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/e5dc45f1-89cb-4680-93d4-6dfda0c667e8/Screenshot_2024-05-02_at_8.45.05_PM.png)
+<Frame>
+    ![Devin](/images/github2.png)
+</Frame>
 
 3. Once you’ve completed all the set up steps in Github, you will be directed to the Devin account settings page where you can confirm the integration is set up. 
     
-    ![Screenshot 2024-06-10 at 12.23.35 AM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/1c4e0b74-2c32-4a6e-a146-dce155fe7602/Screenshot_2024-06-10_at_12.23.35_AM.png)
-    
+<Frame>
+    ![Devin](/images/github3.png)
+</Frame>    
 
 4. **[For Enterprise customers only]** Add the `cognition-team` GitHub account to the relevant repositories. This gives us the ability to help onboard Devin onto your codebase and monitor Devin’s activity.
 
-
-We recommend enabling branch protections on master to ensure checks are enforced before Devin can merge any changes.
+<Tip>We recommend enabling branch protections on master to ensure checks are enforced before Devin can merge any changes.</Tip>
 
 ## Using Devin with the GitHub Integration
 
@@ -43,7 +45,9 @@ Once the integration is set up, you can go to the Devin web application and you 
 
 You can now start running a session and Devin should be able to access your connected GitHub repositories!
 
-![Screenshot 2024-05-02 at 9.47.04 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/1ed9f831-67da-485d-b7f2-540345f60820/fd6eedc6-8c97-45d9-a72f-561a765d3b68.png)
+<Frame>
+    ![Devin](/images/github4.png)
+</Frame>
 
 ## Setting Devin’s Permissions
 
@@ -53,7 +57,9 @@ When setting up the integration, the user can choose to grant permissions such t
 
 Permissions are set when you install the GitHub Devin app, and can always be adjusted through the App Settings in the GitHub account once the app is connected.
 
-![Screenshot 2024-05-02 at 9.27.48 PM.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/4f925d22-65a4-47c3-9aed-b65e115aaef3/c28f2691-ca90-4b1b-aa39-314a56d2fd4b/Screenshot_2024-05-02_at_9.27.48_PM.png)
+<Frame>
+    ![Devin](/images/github5.png)
+</Frame>
 
 Devin requires the following permissions
 
